# mcp-server

./: Dockerfile  README.md  pyproject.toml  requirements.txt  terminal_sse_server.py  test_tool.py
sse_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
